--- a/vijay.html
+++ b/vijay.html
@@ -1,4 +1,8 @@
 <center>
-  <h1>vijay/h1> 
+<h1>vijay</h1> 
 </center>
 <hr>
+
+<P>
+  Joseph Vijay Chandrasekhar, known professionally as Vijay, is an Indian actor and playback singer who works in Tamil cinema
+</P>
